--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1081,3 +1081,23 @@ h3 {
 	background-color:white;
 }
 
+.second-header{
+	text-align:center;
+	font-size:12px;
+	color:$orange;
+	padding:8px;
+	background-color:#FEF4EA;
+	border-top:1px solid $dark-orange;
+	border-bottom:1px solid $orange;
+	margin-bottom:15px;
+}
+
+.btn{
+	i {
+		vertical-align: middle;
+	}
+}
+
+.sign-up-page{
+	padding-bottom:400px;
+}
