--- a/app/views/comments/new.haml
+++ b/app/views/comments/new.haml
@@ -23,7 +23,7 @@
 					= f.collection_select :category_id, Category.order(:name).where("category = ?", "Review"), :id, :name, {}, :id => "search2", include_blank: true
 					%br
 					%br
-					= f.text_area :body, :placeholder => "Make a note about this application"
+					= f.text_area :body, :placeholder => "Make a note about this application, your name will remain anonymous"
 					= f.text_field :title, placeholder: "I know this because ..."
 					= f.hidden_field :commentable_type, value: "Company"
 					%br
