--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -1,22 +1,23 @@
-.tiny-orange
-.dashboard
-.dashboard
-.row-fluid
-	.offset4.span4
-		.left-bar
-			.center-alignment
-				=  image_tag('rocket.png')
-				%h3 Sign Up and keep track of jobs
+.sign-up-page
+	.tiny-orange
+	.dashboard
+	.dashboard
+	.row-fluid
+		.offset4.span4
+			.left-bar
+				.center-alignment
+					=  image_tag('rocket.png')
+					%h3 Sign Up and keep track of jobs
 				
-				= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-					= f.text_field :first_name, :placeholder => " First Name", :class => "focus_"
-					= f.email_field :email, :placeholder => " Email"
-					= f.password_field :password, :placeholder => " Password"
-					= f.hidden_field :role, :value => "student"
-					- if false
-						= f.password_field :password_confirmation, :placeholder => "Password Confirmation"
-					%div= f.submit "Join", :class => "sign-up-button"
-			- if false
-				= render "devise/shared/links"
-			.errors
-				= devise_error_messages!
+					= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+						= f.text_field :first_name, :placeholder => " First Name", :class => "focus_"
+						= f.email_field :email, :placeholder => " Email"
+						= f.password_field :password, :placeholder => " Password"
+						= f.hidden_field :role, :value => "student"
+						- if false
+							= f.password_field :password_confirmation, :placeholder => "Password Confirmation"
+						%div= f.submit "Join", :class => "sign-up-button"
+				- if false
+					= render "devise/shared/links"
+				.errors
+					= devise_error_messages!
