--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -40,7 +40,7 @@
 							There's a brilliant team at UNSW Careers & Employment waiting to improve your resume and apps. Get in before its busy
 		
 		.item		
-			- if comment.subject == "Interview Review"
+			- if Category.find(comment.category_id).name == "Application Process"
 				.info-box-light-teal
 					.center-alignment
 						= link_to image_tag(comment_company.logo.url), comment_company
@@ -48,14 +48,14 @@
 					%br
 					= comment_company.name
 					\- 
-					= comment.subject
+					= Category.find(comment.category_id).name
 					.row-fluid
 						.span10
 							%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
 						.offset1.span1.vote
 							= render partial: 'comments/vote', locals: { comment: comment }	
 
-			- elsif comment.subject == "Salary Review"
+			- elsif Category.find(comment.category_id).name == "Salary & Perks"
 				.info-box-light-orange
 					.center-alignment
 						= link_to image_tag(comment_company.logo.url), comment_company
@@ -70,7 +70,7 @@
 						.offset1.span1.vote
 							= render partial: 'comments/vote', locals: { comment: comment }	
 
-			-elsif comment.subject == "Company Review"
+			-elsif Category.find(comment.category_id).name == "Company & Culture"
 				.info-box-yellow
 					.center-alignment
 						= link_to image_tag(comment_company.logo.url), comment_company
