--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -30,7 +30,7 @@
 			
 			
 			
-		-if counter == 10		
+		-if counter == 15		
 			.item
 				=link_to 'http://bit.ly/1hv6Fbw', :target => '_blank' do 
 					.light-teal-message
@@ -53,7 +53,13 @@
 						.span10
 							%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
 						.offset1.span1.vote
-							= render partial: 'comments/vote', locals: { comment: comment }	
+					=link_to raw("Thank Author &nbsp <i class=\"icon-thumbs-up\"></i> "), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "btn btn-small", :remote => true
+					.pull-right
+						- thanks = comment.upvotes.size 
+						- unless thanks == 0 
+							%span[comment]
+								=thanks
+							have given thanks
 
 			- elsif comment.subject == "Salary Review"
 				.info-box-light-orange
@@ -65,10 +71,17 @@
 					\-
 					=comment.subject
 					.row-fluid
-						.span10
+						.span12
 							%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
-						.offset1.span1.vote
-							= render partial: 'comments/vote', locals: { comment: comment }	
+					%br
+					=link_to raw("Thank Author &nbsp <i class=\"icon-thumbs-up\"></i> "), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "btn btn-small", :remote => true
+					.pull-right
+						- thanks = comment.upvotes.size 
+						- unless thanks == 0 
+							%span[comment]
+								=thanks
+							have given thanks
+
 
 			-elsif comment.subject == "Company Review"
 				.info-box-yellow
@@ -83,7 +96,7 @@
 						.span12
 							%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
 					%br
-					=link_to raw("Thank Author &nbsp <i class=\"icon-thumbs-up\"></i> "), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "btn btn-small"
+					=link_to raw("Thank Author &nbsp <i class=\"icon-thumbs-up\"></i> "), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "btn btn-small", :remote => true
 					.pull-right
 						- thanks = comment.upvotes.size 
 						- unless thanks == 0 
