fixed category_id on dasbhoard.haml

--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -40,7 +40,7 @@
 							There's a brilliant team at UNSW Careers & Employment waiting to improve your resume and apps. Get in before its busy
 		
 		.item		
-			- if Category.find(comment.category_id).name == "Application Process"
+			- if comment.category_id == 11 #11 is the cagetory id for the "Application process"
 				.info-box-light-teal
 					.center-alignment
 						= link_to image_tag(comment_company.logo.url), comment_company
@@ -55,7 +55,7 @@
 						.offset1.span1.vote
 							= render partial: 'comments/vote', locals: { comment: comment }	
 
-			- elsif Category.find(comment.category_id).name == "Salary & Perks"
+			- elsif comment.category_id == 12 #12 refers to Salary & Perks
 				.info-box-light-orange
 					.center-alignment
 						= link_to image_tag(comment_company.logo.url), comment_company
@@ -63,14 +63,14 @@
 					%br
 					= comment_company.name
 					\-
-					=comment.subject
+					= Category.find(comment.category_id).name
 					.row-fluid
 						.span10
 							%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
 						.offset1.span1.vote
 							= render partial: 'comments/vote', locals: { comment: comment }	
 
-			-elsif Category.find(comment.category_id).name == "Company & Culture"
+			-elsif comment.category_id == 10 #10 refers to Company & Culture
 				.info-box-yellow
 					.center-alignment
 						= link_to image_tag(comment_company.logo.url), comment_company
@@ -78,10 +78,11 @@
 					%br
 					= comment_company.name
 					\-
-					=comment.subject
+					= Category.find(comment.category_id).name
 					.row-fluid
 						.span12
 							%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
+			
 					%br
 					=link_to raw("Thank Author &nbsp <i class=\"icon-thumbs-up\"></i> "), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "btn btn-small"
 					.pull-right
@@ -92,5 +93,37 @@
 							have given thanks
 					%br 
 					-# Mark as inaccurate
+
+			-elsif comment.category_id == 13 # refers to Day in the Life
+				.info-box-yellow
+					.center-alignment
+						= link_to image_tag(comment_company.logo.url), comment_company
+					%br
+					%br
+					= comment_company.name
+					\-
+					= Category.find(comment.category_id).name
+					.row-fluid
+						.span12
+							%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
+
+					%br
+					=link_to raw("Thank Author &nbsp <i class=\"icon-thumbs-up\"></i> "), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "btn btn-small"
+					.pull-right
+						- thanks = comment.upvotes.size 
+						- unless thanks == 0 
+							%span[comment]
+								=thanks
+							have given thanks
+					%br 
+					-# Mark as inaccurate
+
+
+
+
+
+
+
+
 		-counter += 1
 	
