--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -34,5 +34,5 @@
 .second-header
 	%b 
 		Do you think DemPoints is helpful? &nbsp - &nbsp 
-		= link_to "Share it to a friend", invite_path
+		= link_to "Share it with a friend", invite_path
 		-# & like our facebook page
