--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1103,7 +1103,7 @@ h3 {
 }
 
 .about-button{
-     position: absolute;
+     position: fixed;
      bottom: 5%;
      right: 2%;
 	 font-size:11px;
