--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -24,7 +24,7 @@
 			.about-area
 				.about-text
 					%b
-						%p Founded by two students who held leadership positions at student societies at UNSW, Dempoints is an online platform to read, create and share job advice by students for students. 
+						%p Founded by two UNSW students who held leadership positions at student societies, Dempoints is an online platform to read, create and share job advice by students for students. 
 					%br
 					%p Whether an engineer, a prospective lawyer, a future consultant or a marketer to-be, DemPoints is one reference point (of many) for you to help you find out what it really takes to enter these industries and give you a better idea of what you're aiming for.
 					%br
