--- a/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/app/views/devise/mailer/invitation_instructions.html.erb
@@ -55,9 +55,9 @@ The Team at DemPoints
 <tr>
 <td style="background-color:#ececec;border-top:10px solid #FFFFFF;" valign="top">
 <span style="font-size:10px;color:#898989;font-family:verdana;">
-Copyright &#169; #####. All Rights Reserved.<br /><br />
+Copyright &#169; DemPoints. All Rights Reserved.<br /><br />
 Room 1025, Quadrangle Building, UNSW Sydney NSW 2052<br />
-Contact us at <a href="mailto:info@unswbsoc.com">team@resumequery.com<br />
+Contact us at <a href="mailto:team@dempoints.com">team@dempoints.com<br />
 
 
 </span>
