about page card changes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1120,3 +1120,14 @@ h3 {
 		color:white !important;
 	}
 }
+
+.about-bottom{
+	padding-bottom:150px;
+}
+
+
+.about{
+	h5{
+		font-size:40px;
+	}
+}
