changed some copy on the add advice page

--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -48,7 +48,7 @@
 				%h5= Company.count
 				%br
 			.info-box-light-orange
-				Number of industries
+				Number of industries represented
 				%br
 				%br
 				%h5= Category.count
