--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1104,7 +1104,7 @@ h3 {
 
 .about-button{
      position: fixed;
-     bottom: 9%;
+     bottom: 5%;
      right: 2%;
 	 font-size:11px;
 	 font-weight:700;
@@ -1130,4 +1130,15 @@ h3 {
 	h5{
 		font-size:40px;
 	}
+}
+
+.big5{
+	h5{
+		font-size:25px;
+	}
+	font-size:15px;
+}
+
+.small-top-padding{
+	padding-top:15px;
 }
