--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -1,68 +1,55 @@
+=# render partial: ab_test("landing_page", "original", "new_copy") 
 .tiny-orange
-
 .home-page
 	.dashboard
-		
 		.container
 			.row-fluid
 				.offset3.span6
 					.center-alignment.home-logo
-						= link_to image_tag('white-logo.png'), root_path 
-						.home-page-text
-							=ab_test("signup_title", "Job advice cards, by students, to help students.", "A treasure trove of student career advice inside.")
-						.dashboard
+						=link_to image_tag('white-logo.png'), root_path 
+
+					.center-alignment
+						%h3
+							Last week 140 students signed up to DemPoints to be better informed about their careers.
+							%br
+							Today it's your turn.
+
+			.row-fluid
+				.small-top-padding
+				.offset1.span10
+					#container
+						.item
+							.info-box-light-teal
+								.center-alignment.big5
+									%h5 Discover Advice
+									%br
+									%br
+									Learn
+						.item
+							.info-box-light-orange
+								.center-alignment.big5
+									%h5 Apply
+						.item
+							.info-box-yellow
+								.center-alignment.big5
+									%h5 Give Back
+		.dashboard
+		.container
+			.row-fluid
+				.offset3.span6
+
+					.dashboard
 						.center-alignment
 							=link_to "Sign Up", new_user_registration_path, :class => "signup-button"
 							%br
 							%br
 							Already have an account? 
 							&nbsp
-							=link_to "Log in now", new_user_session_path 
+							=link_to "Log in now", new_user_session_path
 
-			.row-fluid
-				.dashboard
-				.offset1.span10
-					#container
-						- @comments.each do |comment|
-							- comment_company = comment.get_company_for_comment
-							.item
-								- if comment.subject == "Interview Review"
-									.info-box-light-teal
-										.center-alignment
-											= image_tag(comment_company.logo.url)
-										%br
-										%br
-										= comment_company.name
-										\- 
-										= comment.subject
-										%h5= truncate((sanitize(comment.body)), length: 240)
+.about-bottom
+x
 
-								- elsif comment.subject == "Salary Review"
-									.info-box-light-orange
-										.center-alignment
-											= image_tag(comment_company.logo.url)
-										%br
-										%br		
-										= comment_company.name
-										\-
-										=comment.subject
-										%h5= truncate((sanitize(comment.body)), length: 240)
-								-elsif comment.subject == "Company Review"
-									.info-box-yellow
-										.center-alignment
-											= image_tag(comment_company.logo.url)
-										%br
-										%br
-										= comment_company.name
-										\-
-										=comment.subject
-										%h5= truncate((sanitize(comment.body)), length: 240)
-						=link_to new_user_registration_path do
-							.item
-								.info-box-full-yellow
-									.center-alignment
-										%h5 Sign up to see more advice
-				
-								
 
 =link_to "About Us", about_path, :class => "about-button"
+
