New A/B test on the home page

--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -1,55 +1,1 @@
-=# render partial: ab_test("landing_page", "original", "new_copy") 
-.tiny-orange
-.home-page
-	.dashboard
-		.container
-			.row-fluid
-				.offset3.span6
-					.center-alignment.home-logo
-						=link_to image_tag('white-logo.png'), root_path 
-
-					.center-alignment
-						%h3
-							Last week 140 students signed up to DemPoints to be better informed about their careers.
-							%br
-							Today it's your turn.
-
-			.row-fluid
-				.small-top-padding
-				.offset1.span10
-					#container
-						.item
-							.info-box-light-teal
-								.center-alignment.big5
-									%h5 Discover Advice
-									%br
-									%br
-									Learn
-						.item
-							.info-box-light-orange
-								.center-alignment.big5
-									%h5 Apply
-						.item
-							.info-box-yellow
-								.center-alignment.big5
-									%h5 Give Back
-		.dashboard
-		.container
-			.row-fluid
-				.offset3.span6
-
-					.dashboard
-						.center-alignment
-							=link_to "Sign Up", new_user_registration_path, :class => "signup-button"
-							%br
-							%br
-							Already have an account? 
-							&nbsp
-							=link_to "Log in now", new_user_session_path
-
-.about-bottom
-x
-
-
-=link_to "About Us", about_path, :class => "about-button"
-
+= render partial: ab_test("signup", "threestep", "original") 
