--- a/app/views/staticpages/_threestep.haml
+++ b/app/views/staticpages/_threestep.haml
@@ -10,7 +10,7 @@
 
 					.center-alignment
 						%h3
-							Last week 140 students signed up to DemPoints and took a step closer to their dream job 
+							Last week 140 students signed up to DemPoints and took a step closer to their dream job. 
 							%br
 							Today it's your turn.
 
