--- a/app/views/dashboards/upvoted_comments.haml
+++ b/app/views/dashboards/upvoted_comments.haml
@@ -1,49 +1,3 @@
 #container
 	-current_user.get_up_voted(Comment).each do |comment|
-		- comment_company = comment.get_company_for_comment
-		.item		
-			- if comment.subject == "Interview Review"
-				.info-box-light-teal
-					.center-alignment
-						= link_to image_tag(comment_company.logo.url), comment_company
-					%br
-					%br
-					= comment_company.name
-					\- 
-					= comment.subject
-					.row-fluid
-						.span10
-							%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
-						.offset1.span1.vote
-							= render partial: 'comments/vote', locals: { comment: comment }	
-
-			- elsif comment.subject == "Salary Review"
-				.info-box-light-orange
-					.center-alignment
-						= link_to image_tag(comment_company.logo.url), comment_company
-					%br
-					%br
-					= comment_company.name
-					\-
-					=comment.subject
-					.row-fluid
-						.span10
-							%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
-						.offset1.span1.vote
-							= render partial: 'comments/vote', locals: { comment: comment }	
-
-			-elsif comment.subject == "Company Review"
-				.info-box-yellow
-					.center-alignment
-						= link_to image_tag(comment_company.logo.url), comment_company
-					%br
-					%br
-					= comment_company.name
-					\-
-					=comment.subject
-					.row-fluid
-						.span10
-							%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
-						.offset1.span1.vote
-							= render partial: 'comments/vote', locals: { comment: comment }	
-	
+		=render partial: 'layouts/card', locals: { comment: comment }					
