added facebook like button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
 	<body>
 		<!-- Hi! Hope you enjoy looking under the hood! -->
 		<!-- Our goal with DemPoints is to help give students the opportunities that me (Pasha) and Varun had when we applied for jobs -->
-		<!-- We'd love your help and suggestions! Email us at team@resquery.com  -->		
+		<!-- We'd love your help and suggestions! Email us at team@resquery.com  -->	
+		<%= render 'layouts/like_sdk'%>	
 		<% if signed_in? %>
 			<%= render 'layouts/header'%>
 			<div class="container">
