--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -32,7 +32,4 @@
 						.account-button
 							Log Out
 .second-header
-	%b 
-		Do you think DemPoints is helpful? &nbsp - &nbsp 
-		= link_to "Share it with a friend", invite_path
-		-# & like our facebook page
+	=render 'layouts/like_button'		
