added facebook like buttons

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -758,7 +758,7 @@ h3 {
 	//border-radius: 4px;
 	//background-color:#FCE9D5;
 	border:1px solid $light-grey;
-	border-top: 10px solid #FCE9D5;
+	border-top: 10px solid $orange;
 	padding:10px;
 	margin-top:15px;
 	color:$text-grey;
