--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -4,9 +4,12 @@
 			.center-alignment
 				%h5 Welcome to DemPoints!
 				%br You can post interesting and useful points about companies & their intern/grad jobs here
-				
+				%br 
+				=render 'layouts/like_button'		
 				- # 'finished' code is from finishing the A/B test
 				-finished("signup_title") 
+				%br
+				%br
 				
 	- @comments.each do |comment|
 		=render partial: 'layouts/card', locals: { comment: comment }
