updated share copy

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -25,6 +25,6 @@
 						.account-button
 							Log Out
 .second-header
-	%b Did you find DemPoints useful?: 
+	%b Did you find DemPoints useful? Share it with a friend: 
 	&nbsp
 	=render 'layouts/send_button'		
