--- a/app/views/staticpages/original.haml
+++ b/app/views/staticpages/original.haml
@@ -63,6 +63,9 @@
 								.info-box-full-yellow
 									.center-alignment
 										%h5 Sign up to see more advice
+										%br
+										%br
+										= render 'layouts/facebook_like_large'
 				
 								
 
