--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -52,6 +52,6 @@
 .about-bottom
 
 
-
+=link_to "Sign In", new_user_session_path, :class => "signinbox-button" 
 =link_to "About Us", about_path, :class => "about-button"
 
