--- a/app/views/staticpages/original.haml
+++ b/app/views/staticpages/original.haml
@@ -69,4 +69,5 @@
 				
 								
 
+=link_to "Sign In", new_user_session_path, :class => "signinbox-button" 
 =link_to "About Us", about_path, :class => "about-button"
