fixed error in completing an ab test

--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -7,7 +7,7 @@
 			.left-bar
 				.center-alignment
 					- # 'finished' code is from finishing the A/B test
-					-finished("signup_title")				
+					-finished("landingpage")
 					=  image_tag('rocket.png')
 					%h3 Sign Up and keep track of jobs
 				
