--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -1,5 +1,5 @@
 
-= render partial: ab_test("signup", "threestep", "original") 
+= render partial: ab_test("landingpage", "threestep", "original") 
 
 .about-bottom
 
