update tagline on landing page

--- a/app/views/staticpages/_original.haml
+++ b/app/views/staticpages/_original.haml
@@ -10,7 +10,7 @@
 					.center-alignment.home-logo
 						= link_to image_tag('white-logo.png'), root_path 
 						.home-page-text
-							=ab_test("signup_title", "Job advice cards, by students, to help students.", "A treasure trove of student career advice inside.")
+							A place to read, create and share job advice by students for students
 						.dashboard
 						.center-alignment
 							=link_to "Sign Up", new_user_registration_path, :class => "signup-button"
