--- a/app/views/questions/show.haml
+++ b/app/views/questions/show.haml
@@ -3,3 +3,14 @@
 =@question.category_id
 %p
 =@question.question_content
+
+
+
+= form_for @answer do |f|
+	=f.hidden_field :question_id, :value => params[:id]
+	=f.text_field :user_id
+	=f.fields_for do |comment|
+		=comment.
+		
+	
+	=f.submit
