--- a/app/views/staticpages/_original.haml
+++ b/app/views/staticpages/_original.haml
@@ -8,7 +8,7 @@
 			.row-fluid
 				.offset3.span6
 					.center-alignment.home-logo
-						= link_to image_tag('white-logo.png'), root_path 
+						= link_to image_tag('https://s3-ap-southeast-2.amazonaws.com/static-images-resquery/white-logo.png'), root_path 
 						.home-page-text
 							A place to read, create and share job advice by students for students
 						.dashboard
