--- a/app/views/staticpages/threestep.haml
+++ b/app/views/staticpages/threestep.haml
@@ -8,7 +8,7 @@
 			.row-fluid
 				.offset3.span6
 					.center-alignment.home-logo
-						= link_to image_tag('white-logo.png'), root_path 
+						= link_to image_tag('https://s3-ap-southeast-2.amazonaws.com/static-images-resquery/white-logo.png'), root_path 
 						.home-page-text
 							=ab_test("signup_title", "Job advice cards, by students, to help students.", "A treasure trove of student career advice inside.")
 						.dashboard
