--- a/app/views/staticpages/_threestep.haml
+++ b/app/views/staticpages/_threestep.haml
@@ -5,7 +5,7 @@
 			.row-fluid
 				.offset3.span6
 					.center-alignment.home-logo
-						=link_to image_tag('white-logo.png'), root_path 
+						=link_to image_tag('https://s3-ap-southeast-2.amazonaws.com/static-images-resquery/white-logo.png'), root_path 
 
 					.center-alignment
 						%h3
