--- a/app/views/questions/show.haml
+++ b/app/views/questions/show.haml
@@ -1,6 +1,27 @@
+%b Company Id:
 =@question.company_id
 %p
-=@question.category_id
-%p
-=@question.question_content
 
+%b Question:
+=@question.question_content
+%p
+
+%b Answers:
+
+- @answers.each do |comment|
+	=render partial: 'layouts/card', locals: { comment: comment }
+
+
+
+%h3 Your advice will really help other students! Thanks for sharing!
+.comment-form
+	=form_for @new_comment, :url => {:controller => 'comments', :action => 'create'} do |f|
+		= f.text_area :body, :placeholder => "By anonymously sharing your advice, you're helping someone make better career decisions - getting them closer to their dreams. Thank you!"
+		= f.text_field :title, placeholder: "I know this because ..."
+		= f.hidden_field :commentable_id, value: @question.id
+		= f.hidden_field :commentable_type, value: @new_comment.commentable_type
+		= f.hidden_field :category_id, value: @question.category_id
+		= f.submit
+		
+		
+		
