--- a/app/views/layouts/_card.haml
+++ b/app/views/layouts/_card.haml
@@ -8,5 +8,10 @@
 	- elsif comment.category_id == 10
 		.info-box-yellow
 			=render partial: 'layouts/card_items', locals: { comment: comment}
+	- elsif comment.category_id == 13
+		.info-box-yellow
+			=render partial: 'layouts/card_items', locals: { comment: comment}			
+
+			
 	
 			
