starting to add question features in

--- a/app/views/staticpages/updates.haml
+++ b/app/views/staticpages/updates.haml
@@ -15,18 +15,15 @@
 	
 .container.about
 	.row-fluid
-		.span8
+		.offset2.span8
 			
-			%h1 DemPoints just keeps getting better.
-			%br
-			%span(class="large-text") Here are the very latest features and updates
-			%br
-			%br
+			.center-alignment
+				%h1 DemPoints just keeps getting better.
+				%br
+				%span(class="large-text") Here are the very latest features and updates
+				%br
+				%br
 
-	.row-fluid
-
-			
-		.span8
 			.info-box-updates
 				%h4(class="orange-text")
 					%p Career Q&A the right way
